# surfExp

./: .gitignore  README.html  README.rst  conf.py  contents.html  environment.yml  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  run.md  search.html  searchindex.js
.github/workflows/: linting.yaml  python-package.yml  tests.yml
_modules/: index.html
_modules/experiment/: cli.html  experiment.html  progress.html  suites.html  system.html  tasks.html
_modules/experiment_scheduler/: cli.html
_modules/experiment_setup/: setup.html
_modules/experiment_tasks/: compilation.html  forcing.html  surfex_binary_task.html  tasks.html
_modules/surfex/: bufr.html  cache.html  cli.html  configuration.html  fa.html  file.html  forcing.html  geo.html  grib.html  interpolation.html  namelist.html  netcdf.html  obs.html  obsmon.html  read.html  run.html  timeseries.html  titan.html  util.html  variable.html
config/: config.toml  config_exp.toml  config_exp_observations.toml
config/env/: pc5511.py  ppi-centos7.py
config/submit/: ECMWF-atos.json
docs/: auto_sphinx.py  deode_workflow.md  example.html  example.rst
docs/trainings/: budapest_may_2022.html
ecf/: default.py  stand_alone.py
envs/: ATOS-Bologna
experiment/: cli.py  config_parser.py  configuration.py  datetime_utils.py  experiment.py  logs.py  progress.py  suites.py  system.py  toolbox.py
experiment/scheduler/: scheduler.py  submission.py  suites.py
experiment/setup/: setup.py
experiment/tasks/: __init__.py  compilation.py  discover_tasks.py  forcing.py  gmtedsoil.py  surfex_binary_task.py  tasks.py
experiment/templates/ecflow/: default.py
experiment_scheduler/: submission.py
experiment_tasks/: __init__.py  compilation.py  forcing.py  surfex_binary_task.py  tasks.py
surfexp/: __init__.py  cli.py  experiment.py
surfexp/data/: surfexp.toml
surfexp/data/config/configurations/: carra2.toml  dt.toml  dt_control.toml  dt_no_static_data.toml  hres_an_forcing.toml  metno_ldas.toml  pgd_netcdf.toml  sekf.toml
surfexp/data/config/datasets/: first_guess_dt.yml  meps_thredds.yml  met_nordic.yml
surfexp/data/config/domains/: DRAMMEN.toml  MET_NORDIC_1_0.toml  MET_NORDIC_2_5.toml  dt_2_5_2500x2500.toml
surfexp/data/config/forcing/: forcing_dt_config.yml  forcing_dt_config_an.yml
surfexp/data/config/include/domains/: EDENMARK.toml  NC_EUROPE.toml
surfexp/data/config/include/platform_paths/: ppi_rhel8_a1.toml  ppi_rhel8_b1.toml
surfexp/data/config/include/scheduler/: ecflow_atos_bologna.toml  ecflow_ppi_rhel8_a1.toml  ecflow_ppi_rhel8_b1.toml
surfexp/data/config/include/submission/: atos_bologna.toml  ppi_rhel8_a1.toml  ppi_rhel8_b1.toml
surfexp/data/config/input/: binary_input_data.json
surfexp/data/config/mods/: arome_arctic_offline_ppi.toml  dt.toml  dt_an_forcing.toml  dt_cycling.toml  metno_ldas_single_decade.toml  netcdf_input_pgd.toml  netcdf_input_single_decade.toml  prep.toml
surfexp/data/config/mods/cy46_aa_offline/: isba_dif_snow_ass_decade_dirtyp.toml  isba_dif_snow_ass_decade_netcdf.toml  ppi.toml
surfexp/data/config/mods/cy46_carra2/: isba_dif_snow_ass_decade_dirtyp.toml  isba_dif_snow_ass_decade_netcdf.toml  ppi.toml
surfexp/data/config/mods/cy49t2_deode/: on_demand.toml
surfexp/data/config/mods/dev-CY49T2h_deode/: dt.toml  dt_offline.toml  dt_prep_from_namelist.toml  on_demand.toml
surfexp/data/config/nam/: default_assemble.yml  default_asssemble.yml  dt_an_assemble.yml  surfex_namelists.yml
surfexp/data/config/nam/cy46_aa_offline/: surfex_namelists.yml
surfexp/data/config/nam/cy46_carra2/: surfex_namelists.yml
surfexp/data/config/nam/dev-CY46h1/: surfex_namelists.yml
surfexp/data/config/nam/dev-CY49T2h_deode/: surfex_namelists.yml
surfexp/data/config/scheduler/: ecflow_ppi_rhel8-A-ecf-prod.toml  ecflow_ppi_rhel8-B-ecf-prod.toml  ecflow_ppi_rhel8-ecf-prod.toml  ecflow_ppi_rhel8-trygveasp.toml
surfexp/data/config/stationlist/: stationlist.json  stationlist_dt.json
surfexp/data/config/troika/: troika_config.yml
surfexp/suites/: offline.py  offline_dt.py  offline_dt_an_forcing.py  offline_dt_control.py
surfexp/tasks/: compilation.py  fetch_mars.py  forcing.py  gmtedsoil.py  prefetch_mars.py  surfex_binary_task.py  tasks.py
surfexp/templates/: cli.py  stand_alone.py
surfexp/templates/ecflow/: default.py  requeue.py
tests/: conftest.py
tests/smoke/: test_main.py  test_templates_cli.py
tests/unit/: test_assim.py  test_config.py  test_file_manager.py  test_flow.py  test_scheduler.py  test_setup.py  test_submission.py  test_suites.py  test_surfex_binary_task.py  test_task_forcing.py  test_task_interpolate2grid.py  test_tasks.py
trainings/: budapest_may_2022.html
troika/sites/: sge.py
